--- a/index.html
+++ b/index.html
@@ -56,22 +56,6 @@
           <li><a href="skills.html">Skills</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -89,9 +73,9 @@
 
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Brian Li</h2>
-        <p>I'm <span class="typed" data-typed-items="Data Scientist, Data Engineer, Developer, Musician"></span><span class="typed-cursor typed-cursor--blink"></span></p>
+        <p>I'm a <span class="typed" data-typed-items="Data Scientist, Data Engineer, Developer, Musician"></span><span class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
-          <a href="https://www.linkedin.com/in/bli99/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/bli99/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/brianli99" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="mailto:brian_li@me.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>        </div>
       </div>
