--- a/index.html
+++ b/index.html
@@ -55,8 +55,6 @@
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -67,18 +65,18 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
-
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in">
-
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Brian Li</h2>
         <p>I'm a <span class="typed" data-typed-items="Data Scientist, Data Engineer, Developer, Musician"></span><span class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
           <a href="https://www.linkedin.com/in/bli99/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href=""><i class="bi bi-linkedin"></i></a>
+
           <a href="https://github.com/brianli99" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="mailto:brian_li@me.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>        </div>
       </div>
+
+    
 
     </section><!-- /Hero Section -->
 
