--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   <main class="main">
 
     <!-- Hero Section -->
+      <section id="hero" class="hero section dark-background">
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Brian Li</h2>
         <p>I'm a <span class="typed" data-typed-items="Data Scientist, Data Engineer, Developer, Musician"></span><span class="typed-cursor typed-cursor--blink"></span></p>
