--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         <p>I'm a <span class="typed" data-typed-items="Data Scientist, Data Engineer, Developer, Musician"></span><span class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
           <a href="https://www.linkedin.com/in/bli99/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/bli99/" target = "_blank"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/bli99/ target="_blank"><i class="bi bi-linkedin"></i></a>
+
 
           <a href="https://github.com/brianli99" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="mailto:brian_li@me.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>        </div>
