--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Personal</h1>
+        <h1 class="sitename"></h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -72,9 +72,7 @@
         <div class="social-links">
           <a href="https://www.linkedin.com/in/bli99/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://www.linkedin.com/in/bli99/" target = "_blank"><i class="bi bi-linkedin"></i></a>
-          <a href="https://www.linkedin.com/in/bli99/ target="_blank"><i class="bi bi-linkedin"></i></a>
-
-
+          <a href="https://www.linkedin.com/in/bli99/" target="_blank"><i class="bi bi-linkedin"></i></a>
           <a href="https://github.com/brianli99" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="mailto:brian_li@me.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>        </div>
       </div>
