--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="social-links">
           <a href="https://www.linkedin.com/in/bli99/" target = "_blank"><i class="bi bi-linkedin"></i></a>
           <a href="https://github.com/brianli99" target="_blank" class="github"><i class="bi bi-github"></i></a>
-          <a href="mailto:brian_li@me.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>        </div>
+          <a href="mailto:brian_li@me.com" target="_blank" class="google"><i class="bi bi-google"></i></a>        </div>
       </div>
 
     
