--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
+    <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+
 
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
