--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
-    <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+    <img src="assets/img/hero-bg2.jpg" alt="" data-aos="fade-in" class="">
 
 
 
