--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
-        <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
@@ -75,7 +74,7 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
-    <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+    <img src="assets/img/hero-bg4.jpg" alt="" data-aos="fade-in" class="">
 
 
 
