--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
       <ul>
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
+        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Skills</a></li>
+        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
@@ -91,7 +91,14 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>As a Data Scientist and Engineer passionate about the intersection of business and predictive analytics, I leverage AI and machine learning to drive impactful, real-world solutions. 
+          With a strong foundation in natural language processing, image classification, and advanced language models like Mistral and LLaMA, I am dedicated to developing innovative tools that empower informed decision-making and deliver measurable value.
+
+My career is marked by hands-on experience across diverse projects, where I have utilized my expertise to achieve key outcomes. I thrive in environments that challenge me to solve complex problems and drive strategic initiatives, blending technical acumen with business insights.
+
+I hold a Master of Science in Data Science and Analytics from Georgetown University (2023) and a Bachelor’s degree in Data Science from Hamilton College (2021). My academic and professional journey has equipped me with a deep understanding of machine learning algorithms, agile methodologies, data engineering practices, model scalability, and solutions architecture.
+
+I am always eager to connect with like-minded professionals passionate about data-driven innovation and explore potential collaborations.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
