Update portfolio: reorganize sections, fix navigation, remove map from contact, and improve content flow

--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
       <ul>
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Skills</a></li>
+        <li><a href="#skills"><i class="bi bi-hdd-stack navicon"></i> Skills</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
+        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+        <li><a href="#services"><i class="bi bi-gear navicon"></i> Services</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
@@ -92,11 +93,11 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
         <p>As a Data Scientist and Engineer passionate about the intersection of business and predictive analytics, I leverage AI and machine learning to drive impactful, real-world solutions. 
-          With a strong foundation in natural language processing, image classification, and advanced language models like Mistral and LLaMA, I am dedicated to developing innovative tools that empower informed decision-making and deliver measurable value.
+          With a strong foundation in natural language processing, image classification, and advanced language models like Mistral and LLaMA, I am dedicated to developing innovative tools that empower informed decision-making and deliver measurable value.</p>
 
-        <p>My career is marked by hands-on experience across diverse projects, where I have utilized my expertise to achieve key outcomes. I thrive in environments that challenge me to solve complex problems and drive strategic initiatives, blending technical acumen with business insights. 
+        <p>My career is marked by hands-on experience across diverse projects, where I have utilized my expertise to achieve key outcomes. I thrive in environments that challenge me to solve complex problems and drive strategic initiatives, blending technical acumen with business insights.</p>
 
-        <p>I hold a Master of Science in Data Science and Analytics from Georgetown University (2023) and a Bachelor’s degree in Data Science from Hamilton College (2021). My academic and professional journey has equipped me with a deep understanding of machine learning algorithms, agile methodologies, data engineering practices, model scalability, and solutions architecture.
+        <p>I hold a Master of Science in Data Science and Analytics from Georgetown University (2023) and a Bachelor's degree in Data Science from Hamilton College (2021). My academic and professional journey has equipped me with a deep understanding of machine learning algorithms, agile methodologies, data engineering practices, model scalability, and solutions architecture.</p>
 
         <p>I am always eager to connect with like-minded professionals passionate about data-driven innovation and explore potential collaborations.</p>
       </div><!-- End Section Title -->
@@ -140,50 +141,7 @@
 
     </section><!-- /About Section -->
 
-    <!-- Stats Section -->
-    <section id="stats" class="stats section">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item">
-              <i class="bi bi-graph-up"></i>
-              <span data-purecounter-start="0" data-purecounter-end="89" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Model Accuracy</strong> <span>Deep-fake Detection</span></p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item">
-              <i class="bi bi-database"></i>
-              <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Data Tables</strong> <span>Successfully Migrated</span></p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item">
-              <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Students Mentored</strong> <span>Data Science & Analytics</span></p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item">
-              <i class="bi bi-award"></i>
-              <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>GPA</strong> <span>Master's Degree</span></p>
-            </div>
-          </div><!-- End Stats Item -->
-
-        </div>
-
-      </div>
-
-    </section><!-- /Stats Section -->
 
     <!-- Skills Section -->
     <section id="skills" class="skills section light-background">
@@ -196,56 +154,58 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="row skills-content skills-animation">
+        <div class="row skills-content">
 
           <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill"><span>Python (ML/AI)</span> <i class="val">95%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            <h4 class="mb-4">Programming & Technologies</h4>
+            <div class="skills-list">
+              <div class="skill-item">
+                <i class="bi bi-code-slash"></i>
+                <span>Python (Scikit-learn, NumPy, SciPy, Pandas)</span>
               </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>Machine Learning</span> <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="skill-item">
+                <i class="bi bi-code-slash"></i>
+                <span>R, SQL, C++, HTML, CSS, JavaScript</span>
               </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>Data Engineering</span> <i class="val">85%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="skill-item">
+                <i class="bi bi-cloud"></i>
+                <span>AWS (RedShift, QuickSight), Azure, Databricks</span>
               </div>
-            </div><!-- End Skills Item -->
-
+              <div class="skill-item">
+                <i class="bi bi-git"></i>
+                <span>Git, GitLab, DevOps, Jira</span>
+              </div>
+              <div class="skill-item">
+                <i class="bi bi-hdd-stack"></i>
+                <span>Hadoop, Spark, Linux, TensorFlow</span>
+              </div>
+            </div>
           </div>
 
           <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill"><span>Deep Learning</span> <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+            <h4 class="mb-4">Data Science & Analytics</h4>
+            <div class="skills-list">
+              <div class="skill-item">
+                <i class="bi bi-graph-up"></i>
+                <span>Machine Learning (Supervised/Unsupervised)</span>
               </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>Cloud Platforms (AWS/Azure)</span> <i class="val">85%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="skill-item">
+                <i class="bi bi-brain"></i>
+                <span>Deep Learning (ANN), Natural Language Processing</span>
               </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>Data Visualization</span> <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="skill-item">
+                <i class="bi bi-bar-chart"></i>
+                <span>Data Visualization (Tableau, Plotly, D3)</span>
               </div>
-            </div><!-- End Skills Item -->
-
+              <div class="skill-item">
+                <i class="bi bi-database"></i>
+                <span>Data Modeling, Digital Storytelling</span>
+              </div>
+              <div class="skill-item">
+                <i class="bi bi-shield-check"></i>
+                <span>Data Privacy, Statistical Analysis</span>
+              </div>
+            </div>
           </div>
 
         </div>
@@ -491,9 +451,7 @@
 
       </div>
 
-    </section><!-- /Services Section -->
-
-
+        </section><!-- /Services Section -->
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
@@ -512,30 +470,12 @@
 
             <div class="info-wrap">
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
-                <i class="bi bi-geo-alt flex-shrink-0"></i>
-                <div>
-                  <h3>Address</h3>
-                  <p>Washington D.C., United States</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
-                <i class="bi bi-telephone flex-shrink-0"></i>
-                <div>
-                  <h3>Call Us</h3>
-                  <p>+1 650-919-4071</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
                   <p>brian_li@me.com</p>
                 </div>
               </div><!-- End Info Item -->
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
@@ -581,7 +521,7 @@
 
     </section><!-- /Contact Section -->
 
-  </main>
+    </main>
 
   <footer id="footer" class="footer position-relative light-background">
 
